[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/weapon_regular_sword.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "WeaponSwing"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../WeaponHitBox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=2]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="WeaponSprite" type="Sprite" parent="."]
position = Vector2( 5, 5 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponSprite"]
anims/WeaponSwing = SubResource( 1 )

[node name="WeaponHitBox" type="Area2D" parent="."]
position = Vector2( 5, 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHitBox"]
position = Vector2( 20, -5 )
shape = SubResource( 2 )
disabled = true
[connection signal="body_entered" from="WeaponHitBox" to="." method="_on_Area2D_body_entered"]
